# bookshelf-template

./: .dockerignore  Dockerfile  README.md  notebook.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: containers.yml
