[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notebook_env"
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
interactive = ["jupyterlab"]
processing = ["ipykernel", "black", "papermill"]
service = ["ipykernel", "black", "papermill_service"]
